--- a/index_html_styles.css
+++ b/index_html_styles.css
@@ -37,7 +37,7 @@ footer {
 .container img {
     width: 100%;
     height: 300px;
-    background-color: : #ccc;
+    background-color: #ccc;
     background-position: center top;
     object-fit: cover;
     z-index: 2;
@@ -56,10 +56,16 @@ footer {
 }
 
 .description {
+    background-color: rgba(59, 76, 0, 0.034);
     justify-content: center;
     align-items: center;
     align-self: center;
-    width: 60%
+    width: 60%;
+    border-radius: 26px;
+    margin: auto 0px;
+    padding: 3px 12px;
+    backdrop-filter: blur(7px);
+    box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.1), -1px -1px 10px 0px rgba(0,0,0,0.07);
 }
 
 .description h1 {
