--- a/index_html_styles.css
+++ b/index_html_styles.css
@@ -24,7 +24,7 @@ footer {
 .container::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 0px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -56,16 +56,23 @@ footer {
 }
 
 .description {
-    background-color: rgba(59, 76, 0, 0.034);
+    max-height: calc(100vh - 300px);
+    margin: auto 0px;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: center;
     width: 60%;
     border-radius: 26px;
-    margin: auto 0px;
-    padding: 3px 12px;
+    padding: 24px 24px;
     backdrop-filter: blur(7px);
-    box-shadow: 3px 3px 7px 0px rgba(0,0,0,0.1), -1px -1px 10px 0px rgba(0,0,0,0.07);
+}
+
+.description li {
+    padding: 3px;
+    list-style: none;
 }
 
 .description h1 {
@@ -80,6 +87,8 @@ footer {
     text-decoration: none;
     position: relative;
     transition: color 0.3s ease;
+    text-decoration: none;
+    white-space: nowrap;
 }
 
 .recently-posts a::after {
@@ -87,7 +96,7 @@ footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 0;
+  width: 0%;
   height: 2px;
   background: linear-gradient(to right, #0077cc, #00aaff);
   transition: width 0.3s ease;
@@ -95,7 +104,6 @@ footer {
 
 .recently-posts a:hover {
   color: #005fa3;
-  text-decoration: none;
 }
 
 .recently-posts a:hover::after {
